--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ multidict==6.0.2
 platformdirs==2.5.1
 pylint==2.12.2
 python-dotenv==0.19.2
+pytz==2021.3
 toml==0.10.2
 typing_extensions==4.1.1
 wrapt==1.13.3
